Add git pullall command.

--- a/git/gitconfig.symlink.erb
+++ b/git/gitconfig.symlink.erb
@@ -35,3 +35,9 @@
         added = yellow
         changed = red
         untracked = cyan
+
+# Added wth this command:
+# git config --local alias.pullall '!f(){ git pull "$@" && git submodule update --init --recursive; }; f'
+# http://stackoverflow.com/questions/4611512/is-there-a-way-to-make-git-pull-automatically-update-submodules
+[alias]
+	pullall = "!f(){ git pull \"$@\" && git submodule update --init --recursive; }; f"
